# QT6-cpp

./: .gitignore  README.md
proof_of_concepts/TeslaInfotainment/: CMakeLists.txt  Main.qml  main.cpp
proof_of_concepts/TeslaInfotainment/controllers/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
proof_of_concepts/TeslaInfotainment/ui/BottomBar/: BottomBar.qml  HVACComponent.qml  VolumeControlComponent.qml
proof_of_concepts/TeslaInfotainment/ui/LeftScreen/: LeftScreen.qml
proof_of_concepts/TeslaInfotainment/ui/RightScreen/: NavigationSearchBox.qml  RightScreen.qml
proof_of_concepts/qt-ep4_QObject/: CMakeLists.txt  main.cpp  test.h
proof_of_concepts/qt-ep5_copying_QObjects/: cat.h  main.cpp
proof_of_concepts/qt_age_calculator/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
proof_of_concepts/qt_ep10_QStringView/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep11_QByteArray/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep12_QList/: CMakeLists.txt  main.cpp  test.cpp  test.h
proof_of_concepts/qt_ep13_QMap/: CMakeLists.txt  cat.cpp  cat.h  main.cpp
proof_of_concepts/qt_ep14_QTextStream/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep15_QDebug/: CMakeLists.txt  kitten.cpp  kitten.h  main.cpp
proof_of_concepts/qt_ep16_os/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep17_QStorageInfo/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep18_QDir/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep19_file_io/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep20_inventory_application/: CMakeLists.txt  inventory.cpp  inventory.h  main.cpp
proof_of_concepts/qt_ep21_QThread/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
proof_of_concepts/qt_ep22_Threading_communication/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
proof_of_concepts/qt_ep23_WThreadPool/: CMakeLists.txt  main.cpp  manager.cpp  manager.h  worker.cpp  worker.h
proof_of_concepts/qt_ep24_QtConcurrent/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep25_QMutexLocker/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
proof_of_concepts/qt_ep26_threading_startegies/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
proof_of_concepts/qt_ep3_hello_world/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_ep4_QObject/: test.cpp
proof_of_concepts/qt_ep5_copying_QObjects/: CMakeLists.txt  cat.cpp
proof_of_concepts/qt_ep6_parent_child/: CMakeLists.txt  child.cpp  child.h  main.cpp
proof_of_concepts/qt_ep7_qDeleteAll/: CMakeLists.txt  main.cpp  test.cpp
proof_of_concepts/qt_ep8_smart_pointers/: CMakeLists.txt  main.cpp  test.cpp  test.h
proof_of_concepts/qt_ep9_QString/: CMakeLists.txt  main.cpp
proof_of_concepts/qt_plugin_test/helloworldplugin/: CMakeLists.txt  helloworldplugin.cpp
proof_of_concepts/qt_plugin_test/mainapp/: CMakeLists.txt  main.cpp
